--- a/test/app/components/slots_v2_with_pos_arg_component.html.erb
+++ b/test/app/components/slots_v2_with_pos_arg_component.html.erb
@@ -3,7 +3,7 @@
     <h1 class="<%= item.class_names %>"><%= item.title %></h1>
 
     <div class="item-content">
-      <%= item.content %>
+      <%= item %>
     </div>
   </div>
 <% end %>
