performance component changes

--- a/performance/components/slot_component.html.erb
+++ b/performance/components/slot_component.html.erb
@@ -1,9 +1,13 @@
-<header class="<%= header.classes %>">
-  <%= header.content %>
+<header>
+  <%= render SubcomponentComponent::HeaderComponent.new(classes: header.classes) do %>
+    <%= header.content %>
+  <% end %>
 </header>
 
 <%= items.each do |item| %>
-  <div class="<%= item.classes %>">
-    <%= item.content %>
+  <div>
+    <%= render SubcomponentComponent::ItemComponent.new(classes: item.classes) do %>
+      <%= item.content %>
+    <% end %>
   </div>
 <% end %>
