--- a/test/app/components/sub_component_delegate_component.html.erb
+++ b/test/app/components/sub_component_delegate_component.html.erb
@@ -3,7 +3,7 @@
 <div class="body">
   <% if items.any? %>
     <% items.each do |item| %>
-      <div class="item <%= item.class_names %>">
+      <div class="item <%= item.classes %>">
         <%= item %>
       </div>
     <% end %>
