--- a/test/app/components/sub_component_with_pos_arg_component.html.erb
+++ b/test/app/components/sub_component_with_pos_arg_component.html.erb
@@ -1,6 +1,6 @@
 <%= items.each do |item| %>
   <div class="item">
-    <h1 class="<%= item.class_names %>"><%= item.title %></h1>
+    <h1 class="<%= item.classes %>"><%= item.title %></h1>
 
     <div class="item-content">
       <%= item %>
